using UnityEngine;

public class Strings
{
    // Animator Parameter
    public static string isWalking = "isWalking";
    public static string isRolling = "isRolling";
    public static string Hit = "Hit";
    public static string Dead = "Dead";

    // Tag
    public static string tagPlayer = "Player";
    public static string tagMonster = "Monster";
    public static string tagBoss = "Boss";
    public static string tagEnemy = "Enemy";
}
