using UnityEngine;

public class Strings
{
    // Animator Parameter
    public static string isWalking = "isWalking";
    public static string isRolling = "isRolling";
    public static string isHit = "isHit";
    public static string isDead = "isDead";
    public static string roll = "Roll";
    public static string Hit = "Hit";
    public static string Die = "Die";
}
